--- a/less/modal.less
+++ b/less/modal.less
@@ -87,9 +87,11 @@ html[data-theme='dark'] {
 .leaflet-container {
   background: #fff;
 }
-.react-multi-email {
+.react-multi-email,
+.react-multi-email.focused {
   display: flex;
   flex-wrap: wrap;
+  color: var(--primaryTextColor);
   background-color: var(--formBackground);
   input {
     margin-left: 2px;
@@ -1424,16 +1426,20 @@ html[data-theme='dark'] {
       width: 25%;
       margin-right: 3px;
     }
-    .filter-inputbox {
-      width: 74%;
-      height: 35px;
+    .filter-inputbox,
+    .mark-inputbox {
+      min-height: 40px !important;
+      padding: 8px 10px;
       color: var(--primaryTextColor);
       border: 1px solid var(--formInputBorderColor);
-      background-color: var(--formBackground);
+      background-color: var(--dialogFormGroup);
+      border-radius: 4px;
+    }
+    .filter-inputbox {
+      width: 74%;
     }
     .mark-inputbox {
       width: 200px;
-      height: 35px;
     }
     .fg-close,
     .fg-add,
@@ -1502,6 +1508,11 @@ html[data-theme='dark'] {
       border-radius: 5px;
       background-color: var(--primaryContentHeader);
     }
+  }
+  .react-multi-email input {
+    color: var(--primaryTextColor);
+    margin-left: 2px;
+    background-color: var(--formBackground);
   }
   .error-msg {
     text-align: center;
