--- a/less/app.less
+++ b/less/app.less
@@ -236,6 +236,7 @@ button.standard:hover:not([disabled]) {
 }
 .c-combobox {
   input[type=text] {
+    height: 40px;
     color: var(--primaryTextColor);
     border: 1px solid var(--formInputBorderColor);
     background-color: var(--formBackground);
@@ -326,9 +327,6 @@ button.standard:hover:not([disabled]) {
       }
     }
   }
-}
-.c-contextmenu {
-  position: absolute;
 }
 i.c-checkbox.fg-checkbox {
   color: var(--buttonSelectedColor);
@@ -585,6 +583,15 @@ i.c-checkbox.fg-checkbox {
   }
 }
 #app-container {
+  .textarea-autosize {
+    min-height: 40px !important;
+    padding: 8px 10px;
+    color: var(--primaryTextColor);
+    border: 1px solid var(--formInputBorderColor);
+    background-color: var(--formBackground);
+    border-radius: 4px;
+    width: 100%;
+  }
   .checkbox-ui,
   .radio-ui {
     padding: 0px 5px 5px 5px;
@@ -1506,15 +1513,6 @@ i.c-checkbox.fg-checkbox {
               width: auto;
               height: 35px;
               margin-right: 3px;
-            }
-            .filter-inputbox,
-            .mark-inputbox {
-              min-height: 40px !important;
-              padding: 8px 10px;
-              color: var(--primaryTextColor);
-              border: 1px solid var(--formInputBorderColor);
-              background-color: var(--formBackground);
-              border-radius: 4px;
             }
             .filter-inputbox {
               width: 230px;
