--- a/less/modal.less
+++ b/less/modal.less
@@ -348,6 +348,9 @@ html[data-theme='dark'] {
     }
     .c-combobox {
       width: 100%;
+      input {
+        height: 40px;
+      }
     }
     &.delete {
       span {
