--- a/less/app.less
+++ b/less/app.less
@@ -1216,6 +1216,30 @@ button.standard:hover:not([disabled]) {
       }
       &.tree {
         padding: 10px 25px 10px 10px;
+        .tree-view {
+          width: 100%;
+          padding: 10px 5px;
+          border-radius: 5px;
+          background-color: var(--leftTreeGroup);
+        }
+        button {
+          display: none;
+          font-size: .4em;
+          color: var(--buttonTextColor);
+          padding: .1em .5em;
+          border-radius: 5px;
+          background-color: var(--buttonBackground);
+          &.active {
+            display: inline-block;
+          }
+        }
+        .fg-info {
+          display: none;
+          &.active {
+            position: absolute;
+            display: inline-block;
+          }
+        }
         &.collapse {
           width: 0;
           padding: 0;
