Updat tree selection for Threats Edge section.

--- a/less/app.less
+++ b/less/app.less
@@ -1221,6 +1221,14 @@ button.standard:hover:not([disabled]) {
           padding: 10px 5px;
           border-radius: 5px;
           background-color: var(--leftTreeGroup);
+          .MuiTreeItem-content {
+            margin-bottom: 5px;
+          }
+          .MuiCheckbox-root {
+            float: left;
+            padding: 0;
+            margin: 1px 5px 1px 0;
+          }
         }
         button {
           display: none;
