--- a/less/app.less
+++ b/less/app.less
@@ -1220,6 +1220,11 @@ button.standard:hover:not([disabled]) {
           width: 0;
           padding: 0;
         }
+        .csv-btn {
+          position: absolute;
+          top: 10px;
+          right: 45px;
+        }
         span.loading {
           display: block;
           text-align: center;
