Update floor map to use Material UI for Config Inventory map.

--- a/less/modal.less
+++ b/less/modal.less
@@ -610,6 +610,7 @@ html[data-theme='dark'] {
         .list {
           overflow-y: auto;
           .group {
+            word-break: break-all;
             border-top: 1px solid var(--primaryBorder);
             .path {
               display: flex;
