--- a/less/app.less
+++ b/less/app.less
@@ -2032,7 +2032,7 @@ button.standard:hover:not([disabled]) {
               padding: 0;
               button.manage {
                 position: absolute;
-                top: -40px;
+                top: -50px;
                 right: 0;
               }
               .floor-info {
@@ -2040,9 +2040,10 @@ button.standard:hover:not([disabled]) {
                 height: 450px;
                 .tree {
                   float: left;
-                  text-align: left;
                   width: 20%;
                   height: 100%;
+                  padding: 15px;
+                  text-align: left;
                   border-right: 1px solid var(--primaryBorder);
                   background-color: var(--primaryContentBackground);
                 }
@@ -2913,10 +2914,10 @@ button.standard:hover:not([disabled]) {
           .tree {
             float: left;
             width: 20%;
-            ul.c-tree {
-              min-height: 80vh;
-              border-right: 1px solid var(--primaryBorder);
-            }
+            min-height: 80vh;
+            padding: 15px;
+            background-color: var(--primaryContentBackground);
+            border-right: 1px solid var(--primaryBorder);
           }
           .map {
             float: left;
