--- a/less/app.less
+++ b/less/app.less
@@ -601,6 +601,13 @@ button.standard:hover:not([disabled]) {
     margin-top: 5px;
     margin-right: 10px;
   }
+  .file-input {
+    input[type=text] {
+      padding-left: 10px;
+      background-color: var(--formBackground);
+      border: 1px solid var(--formInputBorderColor);
+    }
+  }
   .sub-header { //The blue bar
     position: relative;
     color: #fff;
