--- a/less/modal.less
+++ b/less/modal.less
@@ -330,10 +330,7 @@ html[data-theme='dark'] {
     label {
       display: block;
       color: var(--primaryContentHeader);
-      margin-bottom: 3px;
-      span {
-        //color: #da364a;
-      }
+      margin-bottom: 5px;
     }
     input,
     select,
@@ -589,6 +586,8 @@ html[data-theme='dark'] {
       .spider-chart {
         float: left;
         width: 65%;
+        border: 1px solid var(--primaryBorder);
+        background-color: var(--primaryContentBackground);
       }
       .main-table.score {
         float: right;
