Begin working on the Material UI combobox component.

--- a/less/app.less
+++ b/less/app.less
@@ -512,6 +512,11 @@ button.standard:hover:not([disabled]) {
   .react-grid-layout {
     background-color: var(--primaryBackground);
   }
+  .checkboxes-tags {
+    input {
+      width: auto !important;
+    }
+  }
   .textarea-autosize {
     min-height: 40px !important;
     padding: 8px 10px;
@@ -1430,9 +1435,6 @@ button.standard:hover:not([disabled]) {
         .switch-control {
           float: right;
         }
-      }
-      .combo-box {
-        margin-top: 10px;
       }
       .activate-time {
         flex-direction: row;
