Fix the bug for IP device batch upload.

--- a/less/app.less
+++ b/less/app.less
@@ -169,8 +169,7 @@ button.standard:hover:not([disabled]) {
 }
 .MuiAutocomplete-root {
   .MuiIconButton-root:hover {
-    color: #fff !important;
-    background-color: var(--buttonSelectedColor) !important;
+    background: none;
   }
 }
 .MuiToggleButton-label {
