Remove relationships table for Config Syslog.

--- a/less/app.less
+++ b/less/app.less
@@ -2394,6 +2394,9 @@ button.standard:hover:not([disabled]) {
                       font-size: .9em;
                       padding: .2em .8em;
                     }
+                    .syslog-input {
+                      margin-top: 10px;
+                    }
                     .pattern {
                       label {
                         float: left;
@@ -2445,16 +2448,6 @@ button.standard:hover:not([disabled]) {
                 display: flex;
                 padding: 10px 5px 0px 5px;
                 margin-bottom: 10px;
-              }
-              .down {
-                padding: 5px 5px;
-                .table-100 {
-                  width: 100%;
-                }
-                table {
-                  border: 1px solid var(--primaryBorder);
-                  border-radius: 5px;
-                }
               }
               .item {
                 margin-left: 10px;
