Add and implement a new Event Tracing tab for HMD.

--- a/less/app.less
+++ b/less/app.less
@@ -159,10 +159,8 @@ button.standard:hover:not([disabled]) {
 .MuiButton-contained {
   box-shadow: none !important;
 }
-.MuiPaper-root {
-  button:hover:not([disabled]) {
-    background: none !important;
-  }
+.MuiPickersDay-day:hover {
+  color: #fff !important;
 }
 .MuiInputBase-root {
   input {
