Add total count for search results table, password change functionality in global menu and IPv6 validations for Config Threats.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1630,7 +1630,7 @@ html[data-theme='dark'] {
       }
     }
     .button-group {
-      margin-top: 15px;
+      margin-top: 13px;
       button {
         min-width: auto;
       }
@@ -1638,7 +1638,7 @@ html[data-theme='dark'] {
   }
   .table-content {
     .table {
-      height: 525px;
+      height: 520px;
       overflow-y: auto;
       margin-bottom: 30px;
     }
@@ -1816,6 +1816,7 @@ html[data-theme='dark'] {
   width: 450px;
   padding: 15px;
 }
+#changePasswordDialog-content,
 #resetPasswordDialog-content {
   min-width: 300px;
   .form-input {
