--- a/less/app.less
+++ b/less/app.less
@@ -2567,14 +2567,20 @@ button.standard:hover:not([disabled]) {
           padding: 20px;
           margin: 0;
           .dropdown-margin {
+            float: left;
+            margin-right: 15px;
             margin-left: 30px;
-            margin-top: 5px;
           }
-          #pageSize {
+          .page-size {
             color: var(--primaryTextColor);
+            height: 35px;
             border-radius: 4px;
             border: 1px solid var(--formInputBorderColor);
             background-color: var(--formBackground);
+          }
+          .total-count {
+            float: left;
+            margin-top: 7px;
           }
         }
         .main-table {
