Fix IPv6 validation for Config Threats. Revert back the Config topology map api logic. Various bug fix.

--- a/less/app.less
+++ b/less/app.less
@@ -1980,7 +1980,7 @@ button.standard:hover:not([disabled]) {
               .user-info {
                 width: 50%;
                 padding: 0px 15px;
-                & > .group {
+                .group {
                   padding: 5px;
                   margin: 10px 0;
                 }
