Minor bug fixes.

--- a/less/app.less
+++ b/less/app.less
@@ -2580,7 +2580,7 @@ button.standard:hover:not([disabled]) {
             display: none;
           }
         }
-        footer { //For pagination in Table, LA and Maps
+        footer {
           min-height: 76px;
           padding: 20px;
           margin: 0;
