--- a/less/login.less
+++ b/less/login.less
@@ -68,11 +68,13 @@ html[data-theme='dark'] {
       margin-bottom: 25px;
     }
     .first-time {
-      font-size: 15px;
       color: #004d93;
-      text-align: right;
+      font-size: 15px;
       margin-top: 10px;
-      cursor: pointer;
+      text-align: right;
+      span {
+        cursor: pointer;
+      }
     }
     .error-msg {
       min-height: 20px;
