Fix HMD Malware download link.

--- a/less/modal.less
+++ b/less/modal.less
@@ -517,6 +517,9 @@ html[data-theme='dark'] {
 #testEmailDialog-content {
   width: 500px;
   padding: 20px 20px 25px 20px;
+  .react-multi-email input {
+    background: none;
+  }
 }
 /* configuration/topology/inventory */
 /* configuration/common/alert-details */
