Remove notifications notice button from Config Inventory.

--- a/less/app.less
+++ b/less/app.less
@@ -527,6 +527,10 @@ button.standard:hover:not([disabled]) {
     background-color: var(--buttonSelectedHover);
   }
 }
+.MuiTableCell-head div,
+.MuiTableSortLabel-icon {
+  color: var(--buttonSelectedColor) !important;
+}
 #app-container {
   .mui-data-table {
     background-color: var(--primaryContentBackground);
