Fix bug for HMD Malware path list. Add confirm dialog for Add to Whitelist button. Add VANS and Event Tracing info for Host page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -679,6 +679,7 @@ html[data-theme='dark'] {
                 margin-right: 10px;
                 border: 1px solid var(--primaryBorder);
                 border-radius: 5px;
+                cursor: pointer;
                 &.rotate {
                   transform: rotate(180deg);
                 }
