update FileInput CSS

--- a/less/app.less
+++ b/less/app.less
@@ -1972,6 +1972,9 @@ button.standard:hover:not([disabled]) {
             border: 1px solid var(--primaryBorder);
             border-radius: 5px;
             background-color: var(--formGroupBackground);
+            input[name='file'] {
+              width: 95%;
+            }
             #autoSettingsAD {
               position: absolute;
               top: -50px;
