Fix host assessment datetime bug and modify MD5 download request.

--- a/less/app.less
+++ b/less/app.less
@@ -726,6 +726,7 @@ button.standard:hover:not([disabled]) {
         padding: 0.5em;
       }
       .search-button {
+        color: #fff;
         height: 32px;
         margin-top: 2px;
         background-color: var(--buttonSelectedColor);        
