--- a/less/modal.less
+++ b/less/modal.less
@@ -1072,6 +1072,7 @@ html[data-theme='dark'] {
       }
       .payload {
         height: 395px;
+        width: 1005px;
         overflow-y: auto;
         padding: 0 10px;
         border: none;
