Convert Threats table from React-UI to MuiTable. Fix table sort function for MuiTable across site.

--- a/less/app.less
+++ b/less/app.less
@@ -529,6 +529,17 @@ button.standard:hover:not([disabled]) {
     background-color: var(--buttonSelectedHover);
   }
 }
+.MuiTableBody-root {
+  .grey {
+    background-color: var(--tableActiveRow) !important;
+    .MuiTableCell-body {
+      color: #fff;
+    }
+    &:hover {
+      background-color: var(--tableActiveRow) !important;
+    }
+  }
+}
 .MuiTableCell-head div,
 .MuiTableSortLabel-icon {
   color: var(--buttonSelectedColor) !important;
