--- a/less/app.less
+++ b/less/app.less
@@ -2320,6 +2320,9 @@ button.standard:hover:not([disabled]) {
               }
             }
             .relatedList {
+              color: var(--primaryTextColor);
+              border: 1px solid var(--formInputBorderColor);
+              background-color: var(--formBackground);
               width: 100%;
             }
           }
